--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         }
       });
     </script>
-  <link href="./css/app.css" rel="stylesheet"></head>
+  <link href="/css/app.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="./js/app.7f03ef44.js"></script></body>
+  <script type="text/javascript" src="/js/app.0a73c4a3.js"></script></body>
 </html>
